# InstiGPT

./: .env.example  .gitignore  Pipfile  README.md  STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dev.vars.example  README.md  package.json  tsconfig.json  wrangler.toml
apps/api/src/: types.ts
apps/api/src/config/: index.ts
apps/api/src/http/: app.ts
apps/api/src/lib/: utils.ts
apps/web/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/config/: index.ts
backend/: .env.example  main.py  pyproject.toml
backend/instigpt/: config.py
backend/instigpt/api/: __init__.py  auth.py  conversation.py  helpers.py  input_models.py
backend/instigpt/data_loaders/: __init__.py  __main__.py  clean_html.py  json.py  pdf.py
backend/instigpt/db/: __init__.py  conversation.py  document.py  session.py  user.py
backend/instigpt/llm/: embeddings.py  generator.py  retriever.py
data/scraped/: misc_cc.json  misc_crnts.json  misc_ieor.json  misc_ppcclt.json  misc_semix.json  misc_syscon.json
docs/: setting-up-the-env.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/: api.tsx  types.ts
scripts/: README.md  embed.py  embed_server.py  requirements.txt  scrape.py
supabase/migrations/: 001_initial_schema.sql  002_add_password_hash.sql  003_feedback_and_cache.sql  004_feedback_reasons.sql  005_stricter_search_threshold.sql
(+44 files in other folders)
